# wedged

./: Cargo.toml  README.md
basis-blade/: Cargo.toml
basis-blade/src/: count.rs  lib.rs
src/: alloc.rs  allocator.rs  basis_blade.rs  blade.rs  coordinates.rs  lib.rs  storage.rs
src/algebra/: aliases.rs  common.rs  constructors.rs  dim_cast.rs  dual.rs  exp.rs  fmt.rs  grade_cast.rs  involute.rs  mod.rs  mul.rs  ops.rs
src/base/: aliases.rs  alloc.rs  basis_blade.rs  common.rs  constructors.rs  coordinates.rs  count.rs  dim.rs  dim_cast.rs  dual.rs  fmt.rs  involute.rs  mod.rs  mul.rs  ops.rs  storage.rs
src/blade/: aliases.rs  constructors.rs  fmt.rs  mod.rs  mul.rs  ops.rs
src/subspace/: aliases.rs  blade.rs  cast.rs  common.rs  constructors.rs  dim_cast.rs  involute.rs  mod.rs  mutable.rs  ops.rs  versor.rs
wedged-macros/: Cargo.toml
wedged-macros/src/: algebra.rs  bench.rs  lib.rs  mul.rs  tokens.rs
