[package]
authors = ["Joshua Smith <jsmith62831@gmail.com>"]
name = "wedged"
description = "A robust and generalized library for Geometric Algebra in Rust."
version = "0.1.0"
edition = "2021"
keywords = ["vector", "algebra", "geometry", "clifford", "grassmann"]
categories = ["mathematics", "algorithms", "science", "game-development", "graphics"]
repository = "https://github.com/jsmith628/wedged"
documentation = "https://docs.rs/wedged"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
derivative = "^2.2"
typenum = "^1.15"
nalgebra = "^0.30"
num-traits = "^0.2"
approx = "^0.5"
wedged-macros = {path="wedged-macros", optional=true}
basis-blade = {path="basis-blade"}

[dev-dependencies]
rayon = "^1.5"

[features]
default = ["code_gen"]

fn_traits = []
code_gen = ["wedged-macros"]

[workspace]
members = ["basis-blade", "wedged-macros"]
